--- a/Twitter_Scraping.ipynb
+++ b/Twitter_Scraping.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#main.py\n",
+    "# main.py\n",
     "\n",
     "# username = '#vikram'\n",
     "# limit = 10\n",
@@ -114,10 +114,7 @@
     }
    ],
    "source": [
-    "# Connect to the MongoDB client\n",
-    "# client = MongoClient('mongodb://localhost:27017/')\n",
-    "# db = client['twitter_db_streamlit']\n",
-    "# collection = db['tweets']\n",
+    "# GUI.py\n",
     "\n",
     "st.title(\"Twitter Scraper\")\n",
     "\n",
@@ -174,14 +171,6 @@
     "        href = f'<a href=\"data:file/json;base64,{b64}\" download=\"tweet_data.json\">Download JSON File</a>'\n",
     "        st.markdown(href, unsafe_allow_html=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94119ab2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
